...
          {/* Title */}
          <View className="gap-3">
            <Text
              className="text-5xl font-headline font-bold text-raices-primary"
              style={{ lineHeight: 52 }}
            >
              Mi Privacidad
            </Text>
            <Text
              className="font-body text-lg leading-7"
              style={{ color: "#544438" }}
            >
              Controla qué información compartes con tus seres queridos para que
...
