appId: com.raicesfrontend.app
env:
  TEST_EMAIL: oa1@example.com
---
- runFlow:
    file: ../flows/dev-login.yaml

- assertVisible: ".*Maria.*"
- assertVisible: "Próximos Eventos"
- assertVisible: "Cita medica Dr. Soto"

- tapOn: "Calendario"
- assertVisible: "Cita medica Dr. Soto"

- assertVisible: "Escuchar mensaje"
- tapOn: "Escuchar mensaje"

- assertVisible: "Escuchar mensaje"
